# advisor

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  PORT_NOTES.md  README.md  RUST_PORT_PLAN.md  SECURITY.md  commit_message.txt  hatch_build.py  pyproject.toml
.cursor/: environment.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: advisor.yml  autotag.yml  ci.yml  release.yml
.kiro/specs/tiered-agent-architecture/: .config.kiro  design.md  requirements.md  tasks.md
advisor/: __init__.py  __main__.py  _fs.py  _style.py  _version.py  audit.py  baseline.py  checkpoint.py  codex_skill.py  cost.py  doctor.py  focus.py  git_scope.py  history.py  install.py  live.py  orchestrate.py  pr_comment.py  presets.py  rank.py  runner_budget.py  sarif.py  skill_asset.py  skill_asset_skill_md_update.txt  suppressions.py  verify.py
advisor/_bin/: advisor
advisor/orchestrate/: __init__.py  _fence.py  _schema.py  advisor_prompt.py  config.py  explorer_prompts.py  pipeline.py  runner_prompts.py  verify_dispatch.py
advisor/orchestrate/_prompts/: __init__.py  advisor.txt
advisor/web/: __init__.py  assets.py  server.py
assets/: demo.tape
docs/: architecture.md  codebase_review.md  prompts.md
scripts/: parity_check.sh  sarif_gate.py  setup.sh
src/: audit.rs  baseline.rs  checkpoint.rs  codex_skill.rs  config.rs  cost.rs  doctor.rs  fence.rs  focus.rs  fs.rs  git_scope.rs  history.rs  install.rs  jsonutil.rs  lib.rs  live.rs  main.rs  models.rs  pr_comment.rs  presets.rs  rank.rs  runner_budget.rs  sarif.rs  skill_asset.rs  style.rs  suppressions.rs  verify.rs  version.rs  web.rs
src/assets/: advisor.txt  codex_skill_md.txt  explorer.txt  nudge_body.txt  skill_asset_skill_md.txt
src/orchestrate/: advisor_prompt.rs  agent_specs.rs  agent_types.rs  explorer_prompts.rs  mod.rs  pipeline.rs  runner_prompts.rs  verify_dispatch.rs
src/web/assets/: app.css  app.js  index.html
tests/: conftest.py  test_audit.py  test_baseline.py  test_behavioral_guidelines_parity.py  test_checkpoint.py  test_codex_skill.py  test_cost.py  test_doctor.py  test_fail_on.py  test_fence.py  test_focus.py  test_fs.py  test_git_scope.py  test_history.py  test_history_append.py  test_history_ranking.py  test_install.py  test_live.py  test_main.py  test_orchestrate.py  test_plan_format.py  test_pr_comment.py  test_presets.py  test_prompt_snapshots.py  test_properties.py  test_public_api.py  test_rank.py  test_rank_php_superglobal_match.py  test_runner_budget.py  test_sarif.py  test_sarif_gate.py  test_style.py  test_suppressions.py  test_tiered_architecture.py  test_verify.py  test_web.py
tests/parity/: audit.json  baseline.json  checkpoint.json  config.json  cost.json  fence.json  focus.json  fs.json  git_scope.json  history.json  install.json  live.json  pr_comment.json  presets.json  presets_json.txt  presets_plain.txt  rank.json  runner_budget.json  sarif.json  skill_asset.json  skill_strings.json  suppressions.json  verify.json
tests/snapshots/: advisor_prompt_full.txt  advisor_prompt_minimal.txt  fix_assignment_large_file_last.txt  fix_assignment_last.txt  fix_assignment_normal.txt  fix_assignment_penultimate.txt  pool_prompt_cap_1.txt  pool_prompt_default_caps.txt  pool_prompt_matching_caps.txt  runner_batch_message.txt  runner_batch_message_with_guidance.txt  runner_dispatch_messages.txt  runner_handoff_empty.txt  runner_handoff_populated.txt  runner_prompt_batch.txt  runner_prompt_single_task.txt  runner_prompt_with_guidance.txt  verify_dispatch_prompt.txt  verify_message.txt
