[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "advisor-agent"
version = "0.6.6"
description = "Opus-led code review-and-fix pipeline for Claude Code (native agent teams, no external API calls)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Justin Adams" }]
keywords = ["claude", "claude-code", "code-review", "ai", "agents", "llm", "pipeline"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "ruff>=0.6",
    "mypy>=1.8",
    "hypothesis>=6",
    "pre-commit>=3",
]
completion = ["shtab>=1.6"]
# The optional web dashboard (`advisor ui`) is built on stdlib
# http.server, so no runtime deps are strictly required. The extra exists
# as a forward-compatible hook: if a future dashboard implementation needs
# a heavier stack (Flask, FastAPI, etc.) it can be added here without
# changing the CLI's install path.
ui = []

[project.urls]
Homepage = "https://github.com/vzwjustin/advisor"
Repository = "https://github.com/vzwjustin/advisor"
Issues = "https://github.com/vzwjustin/advisor/issues"
Changelog = "https://github.com/vzwjustin/advisor/blob/main/CHANGELOG.md"

[project.scripts]
advisor = "advisor.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["advisor"]

[tool.hatch.build.targets.wheel.force-include]
"advisor/orchestrate/_prompts/advisor.txt" = "advisor/orchestrate/_prompts/advisor.txt"
"advisor/py.typed" = "advisor/py.typed"
"CHANGELOG.md" = "advisor/_changelog.md"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line too long — prompt strings are intentionally long
    "SIM108", # ternary-over-if — harms readability for some branches
    "SIM105", # try/except/pass — sometimes we want the comment for context
    "SIM103", # return-condition-directly — extra branches aid readability
    "RUF001", # ambiguous unicode glyphs — our CLI intentionally uses ℹ, ✗, ↻, etc.
    "RUF002", # same, for docstrings
    "RUF003", # same, for comments
    "RUF022", # __all__ ordering — our list groups by module topic, not alpha
    "E402",   # module-level import not at top — we group pkg imports cleanly
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "B011",  # allow bare `assert False`-style patterns in tests
    "E402",  # hypothesis guarded-import pattern
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
# ``shtab`` is an optional runtime dependency (see the ``completion`` extra).
# It is imported behind a try/except in ``advisor/__main__.py`` so the CLI
# continues to work without it. CI's lint job installs only the ``dev``
# extra, so without this override mypy fails on an import-not-found error
# that has no bearing on the actual type-safety of the code.
module = "shtab"
ignore_missing_imports = true
